# pytracer

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  camera.py  colors.py  geometry.py  hdrimages.py  hitrecord.py  imagetracer.py  lights.py  main.py  materials.py  misc.py  pcg.py  pyproject.toml  ray.py  render.py  requirements.txt  scene_file.py  shapes.py  test_all.py  transformations.py  world.py
.github/workflows/: tests.yml
examples/: demo.txt
src/pytracer/: __main__.py  camera.py  colors.py  geometry.py  hdrimages.py  hitrecord.py  imagetracer.py  lights.py  main.py  materials.py  misc.py  pcg.py  ray.py  render.py  scene_file.py  shapes.py  transformations.py  world.py
tests/: test_all.py
