[project]
name = "pytracer"
version = "2.0.1"
description = "A modernized version of the Pytracer project"
authors = [{ name="Maurizio Tomasi", email="ziotom78@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pytest~=8.3",
    "pillow~=11.2",
    "click~=8.2",
    "ruff~=0.11",
]

[project.scripts]
pytracer = "pytracer.main:main"  # Format: command = "module:function"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"